--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.11",
